			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02m: *********************************

IMP/MAN: (05/01/05, SMR) Added MOSIS CMOS PLA generator.

BUG: (05/01/05, SMR) Readable dump input does not handle old port name conversion.
FIX: Added the method input.ReadableDump.findProperPortInst().

IMP: (05/02/05. GVG) Extra work to allow libraries expanded in Explorer view if you open them with View->Edit view (Bug# 223).

BUG: (05/01/05, RK) clarify NCC error message. For hierarchical comparison specify path relative to current Cell

BUG: (05/01/05, RK) NCC shouldn't blow up if Cell has no wires.

BUG: (04/29/05, GVG) Missing refresh in explorer tree if current library is changed (Bug #251, #270)
FIX: Added WindowFrame.wantToRedoLibraryTree() in setCurLibAction().

BUG: (04/28/05, SMR) Expanding or unexpanding cell instances doesn't redraw right.
FIX: In CircuitChanges.ExpandUnExpand.doIt(), call PixelDrawing.clearSubCellCache().

IMP: (04/27/05, GVG) Modification in mac-app (ant) and Info.plist to get it working on Mac OS X.
"command" is deprecated and it was replaced by "executable"

BUG: (04/26/05, GVG) Exception in postscript generation if directory is write-protected (Bug #289)
FIX: Detect the condition and abort job

BUG: (04/26/05, GVG) Ability to abort PostScript generation (Bug #286)
FIX: Any output call passes Job class in case particular tool wants to monitor abort operation.

BUG: (04/26/05, GVG) 3D View: distance and thickness modifications in 3D Preferences not reflected in 3D View windows
FIX: Code now handles geometries by reference.

BUG: (04/25/05, SMR) Explorer tree expansion is incorrect (Bugs #269 and #285).
FIX: Only expand to the current library after reading it.

IMP (04/25/05, SMR) When replacing a library, error messages are more clear (Bug #255).

IMP/MAN: (04/25/05, SMR) HSpice input can now accept files with the extension .tr1, .tr2, ... (Bug #258).
